Fix vertical alignment on footer copyright

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -45,12 +45,13 @@
           text-decoration: underline;
         }
       }
-      &.copyright {
+      .copyright {
         font-weight: bold;
         color: lighten($secondary, 50%);
         display: none;
         @include media-breakpoint-up(md) {
           display: inline-block;
+          padding: 10px 8px 10px 8px;
         }
       }
     }
@@ -66,7 +67,6 @@
         list-style: none;
         a {
           display: inline-block;
-          height: 40px;
           padding: 10px 8px 10px 8px;
           font-weight: 300;
         }
